tests/dataset/tpc-ds/compiler/c/q33.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static int month = 1;
static int year = 2000;

typedef struct {
  int i_manufact_id;
  double total_sales;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_manufact_id;
  double total_sales;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_sk;
  int i_manufact_id;
  const char *i_category;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_year;
  int d_moy;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ca_address_sk;
  int ca_gmt_offset;
} customer_addres_t;
typedef struct {
  int len;
  customer_addres_t *data;
} customer_addres_list_t;
customer_addres_list_t create_customer_addres_list(int len) {
  customer_addres_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_addres_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_item_sk;
  double ss_ext_sales_price;
  int ss_sold_date_sk;
  int ss_addr_sk;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cs_item_sk;
  double cs_ext_sales_price;
  int cs_sold_date_sk;
  int cs_bill_addr_sk;
} catalog_sale_t;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ws_item_sk;
  double ws_ext_sales_price;
  int ws_sold_date_sk;
  int ws_bill_addr_sk;
} web_sale_t;
typedef struct {
  int len;
  web_sale_t *data;
} web_sale_list_t;
web_sale_list_t create_web_sale_list(int len) {
  web_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int manu;
  double price;
} ss_item_t;
typedef struct {
  int len;
  ss_item_t *data;
} ss_item_list_t;
ss_item_list_t create_ss_item_list(int len) {
  ss_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(ss_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int manu;
  double price;
} cs_item_t;
typedef struct {
  int len;
  cs_item_t *data;
} cs_item_list_t;
cs_item_list_t create_cs_item_list(int len) {
  cs_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(cs_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int manu;
  double price;
} ws_item_t;
typedef struct {
  int len;
  ws_item_t *data;
} ws_item_list_t;
ws_item_list_t create_ws_item_list(int len) {
  ws_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(ws_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_manufact_id;
  double total_sales;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q33_simplified_result;
static void test_TPCDS_Q33_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.i_manufact_id = 1, .total_sales = 150.0},
                   (tmp_item_t){.i_manufact_id = 2, .total_sales = 50.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q33_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q33_simplified_result.len; i3++) {
      if (test_TPCDS_Q33_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  item_t item[] = {
      (item_t){.i_item_sk = 1, .i_manufact_id = 1, .i_category = "Books"},
      (item_t){.i_item_sk = 2, .i_manufact_id = 2, .i_category = "Books"}};
  int item_len = sizeof(item) / sizeof(item[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_year = 2000, .d_moy = 1}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  customer_addres_t customer_address[] = {
      (customer_addres_t){.ca_address_sk = 1, .ca_gmt_offset = (-5)},
      (customer_addres_t){.ca_address_sk = 2, .ca_gmt_offset = (-5)}};
  int customer_address_len =
      sizeof(customer_address) / sizeof(customer_address[0]);
  store_sale_t store_sales[] = {(store_sale_t){.ss_item_sk = 1,
                                               .ss_ext_sales_price = 100.0,
                                               .ss_sold_date_sk = 1,
                                               .ss_addr_sk = 1},
                                (store_sale_t){.ss_item_sk = 2,
                                               .ss_ext_sales_price = 50.0,
                                               .ss_sold_date_sk = 1,
                                               .ss_addr_sk = 2}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  catalog_sale_t catalog_sales[] = {(catalog_sale_t){.cs_item_sk = 1,
                                                     .cs_ext_sales_price = 20.0,
                                                     .cs_sold_date_sk = 1,
                                                     .cs_bill_addr_sk = 1}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  web_sale_t web_sales[] = {(web_sale_t){.ws_item_sk = 1,
                                         .ws_ext_sales_price = 30.0,
                                         .ws_sold_date_sk = 1,
                                         .ws_bill_addr_sk = 1}};
  int web_sales_len = sizeof(web_sales) / sizeof(web_sales[0]);
  ss_item_list_t tmp4 = ss_item_list_t_create(store_sales.len * date_dim.len *
                                              customer_address.len * item.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < store_sales_len; tmp6++) {
    store_sale_t ss = store_sales[tmp6];
    for (int tmp7 = 0; tmp7 < date_dim_len; tmp7++) {
      date_dim_t d = date_dim[tmp7];
      if (!(ss.ss_sold_date_sk == d.d_date_sk)) {
        continue;
      }
      for (int tmp8 = 0; tmp8 < customer_address_len; tmp8++) {
        customer_addres_t ca = customer_address[tmp8];
        if (!(ss.ss_addr_sk == ca.ca_address_sk)) {
          continue;
        }
        for (int tmp9 = 0; tmp9 < item_len; tmp9++) {
          item_t i = item[tmp9];
          if (!(ss.ss_item_sk == i.i_item_sk)) {
            continue;
          }
          if (!((strcmp(i.i_category, "Books") == 0) && d.d_year == year &&
                d.d_moy == month && ca.ca_gmt_offset == ((-5)))) {
            continue;
          }
          tmp4.data[tmp5] = (ss_item_t){.manu = i.i_manufact_id,
                                        .price = ss.ss_ext_sales_price};
          tmp5++;
        }
      }
    }
  }
  tmp4.len = tmp5;
  cs_item_list_t tmp10 = cs_item_list_t_create(
      catalog_sales.len * date_dim.len * customer_address.len * item.len);
  int tmp11 = 0;
  for (int tmp12 = 0; tmp12 < catalog_sales_len; tmp12++) {
    catalog_sale_t cs = catalog_sales[tmp12];
    for (int tmp13 = 0; tmp13 < date_dim_len; tmp13++) {
      date_dim_t d = date_dim[tmp13];
      if (!(cs.cs_sold_date_sk == d.d_date_sk)) {
        continue;
      }
      for (int tmp14 = 0; tmp14 < customer_address_len; tmp14++) {
        customer_addres_t ca = customer_address[tmp14];
        if (!(cs.cs_bill_addr_sk == ca.ca_address_sk)) {
          continue;
        }
        for (int tmp15 = 0; tmp15 < item_len; tmp15++) {
          item_t i = item[tmp15];
          if (!(cs.cs_item_sk == i.i_item_sk)) {
            continue;
          }
          if (!((strcmp(i.i_category, "Books") == 0) && d.d_year == year &&
                d.d_moy == month && ca.ca_gmt_offset == ((-5)))) {
            continue;
          }
          tmp10.data[tmp11] = (cs_item_t){.manu = i.i_manufact_id,
                                          .price = cs.cs_ext_sales_price};
          tmp11++;
        }
      }
    }
  }
  tmp10.len = tmp11;
  ws_item_list_t tmp16 = ws_item_list_t_create(web_sales.len * date_dim.len *
                                               customer_address.len * item.len);
  int tmp17 = 0;
  for (int tmp18 = 0; tmp18 < web_sales_len; tmp18++) {
    web_sale_t ws = web_sales[tmp18];
    for (int tmp19 = 0; tmp19 < date_dim_len; tmp19++) {
      date_dim_t d = date_dim[tmp19];
      if (!(ws.ws_sold_date_sk == d.d_date_sk)) {
        continue;
      }
      for (int tmp20 = 0; tmp20 < customer_address_len; tmp20++) {
        customer_addres_t ca = customer_address[tmp20];
        if (!(ws.ws_bill_addr_sk == ca.ca_address_sk)) {
          continue;
        }
        for (int tmp21 = 0; tmp21 < item_len; tmp21++) {
          item_t i = item[tmp21];
          if (!(ws.ws_item_sk == i.i_item_sk)) {
            continue;
          }
          if (!((strcmp(i.i_category, "Books") == 0) && d.d_year == year &&
                d.d_moy == month && ca.ca_gmt_offset == ((-5)))) {
            continue;
          }
          tmp16.data[tmp17] = (ws_item_t){.manu = i.i_manufact_id,
                                          .price = ws.ws_ext_sales_price};
          tmp17++;
        }
      }
    }
  }
  tmp16.len = tmp17;
  list_int union_sales = concat(tmp4, tmp10, tmp16);
  result_item_list_t result = (result_item_list_t){0, NULL};
  printf("[");
  for (int i22 = 0; i22 < result.len; i22++) {
    if (i22 > 0)
      printf(",");
    result_item_t it = result.data[i22];
    printf("{");
    _json_string("i_manufact_id");
    printf(":");
    printf(",");
    _json_string("total_sales");
    printf(":");
    _json_float(it.total_sales);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q33_simplified_result = result;
  test_TPCDS_Q33_simplified();
  return 0;
}
